@@ -13,9 +13,16 @@
 	</NfoUrl>
 
 	<CreateSearchUrl dest="3">
-		<RegExp input="$$1" output="&lt;url&gt;http://www.google.it/search?q=\1$$4+site:mymovies.it|User-Agent=Mozilla/5.0 (X11; Linux x86_64; rv:7.0.1) Gecko/20100101 Firefox/7.0.1&lt;/url&gt;" dest="3">
+		<RegExp conditional="google" input="$$1" output="&lt;url&gt;http://www.google.it/search?q=\1$$4+site:mymovies.it|User-Agent=Mozilla/5.0 (X11; Linux x86_64; rv:7.0.1) Gecko/20100101 Firefox/7.0.1&lt;/url&gt;" dest="3">
 			<!-- Add film year, stored in $$2 for default by xbmc -->
 			<RegExp input="$$2" output="%20(\1)" dest="4">
+				<expression clear="yes">(.+)</expression>
+			</RegExp>
+			<expression noclean="1" />
+		</RegExp>
+		<RegExp conditional="!google" input="$$1" output="&lt;url&gt;http://www.mymovies.it/database/ricerca/avanzata/?titolo=\1&amp;anno_prod=$$4&amp;submit=Inizia+ricerca+%BB|User-Agent=Mozilla/5.0 (X11; Linux x86_64; rv:7.0.1) Gecko/20100101 Firefox/7.0.1&lt;/url&gt;" dest="3">
+			<!-- Add film year, stored in $$2 for default by xbmc -->
+			<RegExp input="$$2" output="\1" dest="4">
 				<expression clear="yes">(.+)</expression>
 			</RegExp>
 			<expression noclean="1" />
@@ -23,7 +30,7 @@
 	</CreateSearchUrl>
 
 	<GetSearchResults dest="8">
-		<RegExp input="$$5" output="&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot; standalone=&quot;yes&quot;?&gt;&lt;results&gt;\1&lt;/results&gt;" dest="8">
+		<RegExp conditional="google" input="$$5" output="&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot; standalone=&quot;yes&quot;?&gt;&lt;results&gt;\1&lt;/results&gt;" dest="8">
 			<!-- Add new link style to Search result (http://www.mymovies.it/film/<year>/<film_name>/) -->
 			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\3 (\2)&lt;/title&gt;&lt;url cache=&quot;main.html&quot;&gt;\1&lt;/url&gt;&lt;id&gt;\1&lt;/id&gt;&lt;/entity&gt;" dest="5">
 				<expression repeat="yes" cs="true">&lt;h3 class=&quot;r&quot;&gt;&lt;a href=&quot;(http://www\.mymovies\.it/film/([0-9]{4})/[^/]+/)&quot; [^&gt;]+&gt;(.+?)(?: +- +MYmovies)?(?: +\| +MYmovies)?&lt;/a&gt;&lt;/h3&gt;</expression>
@@ -31,6 +38,17 @@
 			<!-- Add OLD link style to Search result (www.mymovies.it/dizionario/recensione.asp?id=[0-9]) -->
 			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\2 \3&lt;/title&gt;&lt;url cache=&quot;main.html&quot;&gt;\1&lt;/url&gt;&lt;id&gt;\1&lt;/id&gt;&lt;/entity&gt;" dest="5+">
 				<expression repeat="yes" cs="true">&lt;h3 class=&quot;r&quot;&gt;&lt;a href=&quot;(http://www\.mymovies\.it/dizionario/recensione\.asp\?id=[^&quot;]+)&quot; [^&gt;]+&gt;(.+?)(?: +- +MYmovies)?(?: +\| +MYmovies)?&lt;/a&gt;&lt;/h3&gt;</expression>
+			</RegExp>
+			<expression noclean="1" />
+		</RegExp>
+		<RegExp conditional="!google" input="$$5" output="&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot; standalone=&quot;yes&quot;?&gt;&lt;results&gt;\1&lt;/results&gt;" dest="8">
+			<!-- Add new link style to Search result (http://www.mymovies.it/film/<year>/<film_name>/) -->
+			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\2&lt;/title&gt;&lt;url cache=&quot;main.html&quot;&gt;\1&lt;/url&gt;&lt;id&gt;\1&lt;/id&gt;&lt;/entity&gt;" dest="5">
+				<expression repeat="yes" cs="true">&lt;h2&gt;[^&lt;]*&lt;a href=&quot;(http://www\.mymovies\.it/film/([0-9]{4})/[^/]+/)&quot; [^&gt;]+&gt;([^&lt;]+)&lt;/a&gt;[^&lt;]*&lt;/h2&gt;</expression>
+			</RegExp>
+			<!-- Add OLD link style to Search result (www.mymovies.it/dizionario/recensione.asp?id=[0-9]) -->
+			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\2&lt;/title&gt;&lt;url cache=&quot;main.html&quot;&gt;\1&lt;/url&gt;&lt;id&gt;\1&lt;/id&gt;&lt;/entity&gt;" dest="5+">
+				<expression repeat="yes" cs="true">&lt;h2&gt;[^&lt;]*&lt;a href=&quot;(http://www\.mymovies\.it/dizionario/recensione\.asp\?id=[^&quot;]+)&quot; [^&gt;]+&gt;([^&lt;]+)&lt;/a&gt;[^&lt;]*&lt;/h2&gt;</expression>
 			</RegExp>
 			<expression noclean="1" />
 		</RegExp>
