@@ -23,4 +23,7 @@
     <string id="30302">Audience critique (slow)</string>
     <string id="30303">Forum comments (slow)</string>
     <string id="30304">Famous film phrases (slow)</string>
+    
+    <string id="30400">Generals</string>
+    <string id="30401">Use Google for search</string>
 </strings>
