@@ -23,4 +23,7 @@
     <string id="30302">Commenti del Pubblico (lento)</string>
     <string id="30303">Commenti sul Forum (lento)</string>
     <string id="30304">Frasi Celebri del film (lento)</string>
+    
+    <string id="30400">Generali</string>
+    <string id="30401">Usa Google per cercare</string>
 </strings>
